src/main.scss
$package: roguebuilder;

@import "~normalize.css/normalize.css";
$fa-font-path: "~font-awesome/fonts";
@import "~font-awesome/scss/font-awesome";
@import "../repo/mana-cost/css/mana-cost.css";
@font-face {
	font-family: "Beleren Bold";
	src:url("../fonts/BELEREN-BOLD.eot");
	src:url("../fonts/BELEREN-BOLD.eot?#iefix") format("embedded-opentype"),
		url("../fonts/BELEREN-BOLD.woff") format("woff"),
		url("../fonts/BELEREN-BOLD.svg") format("svg");
}
$sans-serif: Ariel, sans-serif;
$beleren: 'Beleren Bold', $sans-serif;

$breakpoint-small: 40em;
$breakpoint-big: 60em;


$background-color: rgba(168, 168, 168, 0.3);
$opaque-background-color: #c5c5c5;
$dark-background-color: rgba(100, 100, 100, 0.3);
$text-color: #333;
$light-text-color: #888;

$rogue-blue: #73959b;
$rogue-dark-blue: #1d3544;
$rogue-brown: #825626;
$rogue-light-brown: #805724;
$rogue-fishbone: #ded3b7;
$rogue-rich-purple: #723270;
$rogue-cool-purple: #3e438e;

@import "card-list.scss";

div.roguebuilder {
	.hidden-input {
		width: 0.1px;
		height: 0.1px;
		opacity: 0;
		overflow: hidden;
		position: absolute;
		z-index: -1;
	}
	h1 {
		font-family: $beleren;
		font-size: 2em;
		margin: 0.2em;
	}
	h2 {
		font-style: italic;
		font-size: 1.4em;
		margin: 0.2em;
	}
	h3 {
		font-style: italic;
		font-size: 1.2em;
		margin: 0.1em;
	}
	.decklist {
		position:relative;
		font-family: $sans-serif;
		background-color: lighten($background-color,20%);
		color: $text-color;
		max-width: 61em;
		@media (max-width: $breakpoint-big) {
			max-width: 41em;
		}
		@media (max-width: $breakpoint-small) {
			max-width: 30em;
		}
		.close-button {
			cursor: pointer;
			position: absolute;
			z-index: 1000;
			right:0;
			top: -4px;
			font-size: 2em;
		}
	}
	.head {
		position: relative;
		.name {
			display: inline-block;
		}
		.actions {
			margin-right: 4.5em;
			color: $light-text-color;
		}
		.price {
			display: inline-block;
			white-space: nowrap;
			color: $light-text-color;
			font-size: 0.9em;
			margin-left: 0.8em;
			margin-top: 0.25em;
			margin-bottom: 0.25em;
			@media (max-width: $breakpoint-small) {
				display: block;
			}
		}
		.select {
			width: 18em;
			text-align: right;
			position: absolute;
			left: 38.5em;
			bottom: 0.4em;
			span {
				font-size: 0.8em;
			}
			@media (max-width: $breakpoint-big) {
				left: 18.5em;
			}
			@media (max-width: $breakpoint-small) {
				text-align: left;
				position: relative;
				margin-left: 0.6em;
				margin-bottom: 0.5em;
				bottom: 0;
				left: auto;
			}
		}
	}
	div.body {
		position: relative;
		min-height: 28em;
		background: $background-color;
		font-size: 0.9em;
		display: flex;
		@media (max-width: $breakpoint-small) {
			flex-direction: column;
		}
		div.footprint {
			@media (max-width: $breakpoint-small) {
				height: 36em;
			}
		}
		div.main-menu {
			> .overlay {
				position: absolute;
				pointer-events: none;
				height: 100%;
				width: 100%;
			}
			> .overlay.side {
				z-index: 102;
				background-image: radial-gradient(circle closest-corner, transparent, rgba(0,0,0,0.2) 60%, rgba(0, 0, 0, 1));
			}
			> .overlay.bottom {
				z-index: 100;
				background-image: linear-gradient(0deg, black, rgba(0, 0, 0, 0.8) 45%, rgba(0, 0, 0, 0.1) 55%, transparent);
			}
			overflow-x: scroll;
			.menu-items {
				position: absolute;
				padding-top: 1em;
				z-index:1000;
			}
			.menu-item {
				cursor: pointer;
				padding: 0.25em 0.4em 0.1em 0.2em;
				border-radius: 0 0.2em 0.2em 0;
				width: 1.9em;
				text-align: right;
				font-size: 2em;
				&:hover {
					width: 3em;
				}
			}
			.file-upload {
				background-color: $rogue-dark-blue;
				color: $rogue-blue;
				transition: width 0.5s ease, background-color 0.5s ease, color 0.5s ease;
				&:hover {
					transition: width 0.2s ease, background-color 0.5s ease, color 0.5s ease;
					background-color: lighten($rogue-dark-blue, 5%);
					color: lighten($rogue-blue, 20%);
				}
			}
			.deck-list {
				white-space: nowrap;
				margin-top: 2em;
				margin-left: 10em;
				@media (max-width: $breakpoint-small) {
					margin-left: 4em;
				}
				.deck-cover {
					cursor: pointer;
					position: relative;
					display: inline-block;
					margin-right: 4em;
					width: 17.9em;
					white-space: normal;
					color: $light-text-color;
					&:hover {
						color: lighten($light-text-color,50%);
					}
					&:hover .overlay {
						opacity: 0;
					}
					.overlay {
						position: absolute;
						pointer-events: none;
						z-index: 10;
						height: 100%;
						width: 100%;
						border-radius: 0.8em;
						background: black;
						opacity: 0.2;
					}
					@media (max-width: $breakpoint-small) {
						width:80vw;
						max-width: 24em;
						height: auto;
					}
					h2 {
						position: absolute;
						z-index: 101;
						margin: auto;
						left: 5%;
						right: 5%;
						top: 57%;
					}
				}
			}
		}
		.lists {
			margin: 1em 0;
			width: 44em;
			display: flex;
			flex-direction: column;
			flex-wrap: wrap;
			align-items: flex-start;
			justify-content: flex-start;
			@media (max-width: $breakpoint-big) {
				width: 22em;
				height: auto !important;
			}
		}
	}
	div.preview-track {
		pointer-events: none;
		@media (max-width: $breakpoint-small) {
			position: absolute;
			top: 0;
			bottom: 3vh;
		}
	}
	div.preview-frame {
		pointer-events: all;
		padding-top: 0.5em;
		padding-bottom: 0.5em;
		@media (max-width: $breakpoint-small) {
			height: auto;
			padding-top :0;
			margin-bottom: 0;
		}
		height: 28em;
		span {
			padding-left: 3em;
			font-size: 0.8em;
		}
	}
	div.preview-frame.fixed {
		position: fixed;
		top: 0;
		@media (max-width: $breakpoint-small) {
			top: -1em;
		}
	}
	div.preview-frame.bottom {
		position: absolute;
		bottom: 0;
	}
	div.preview {
		padding-bottom: 0.5em;
		margin: 1em 1em 0.2em 1em;
		@media (max-width: $breakpoint-small) {
			background: $opaque-background-color;
			padding-bottom: 1vh;
		}
	}
	div.preview-img{
		height: 25em;
		width: 18em;
		overflow: hidden;
		border-radius: 0.8em;
		background: black;
		@media (max-width: $breakpoint-small) {
			width:80vw;
			max-width: 24em;
			height: auto;
		}
		img {
			@media (max-width: $breakpoint-small) {
				width:100%;
				height: auto;
			}
			height:100%
		}
	}
}

