Fix background overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -283,7 +283,7 @@ div.roguebuilder {
 	}
 	div.preview-img{
 		height: 25em;
-		width: 18em;
+		width: 17.9em;
 		overflow: hidden;
 		border-radius: 0.8em;
 		background: black;
